--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "ts-matrices",
   "version": "1.0.0",
   "private": false,
-  "description": "Advanced type-level utilities for arrays, matrices, and numeric operations (filtering, intersection, transposition, and min/max)",
+  "description": "Advanced type-level utilities for arrays, matrices, and numeric operations (filtering, intersection, transposition, and min/max).",
   "type": "module",
   "keywords": [
     "typescript",
     "utility",
     "types",
-    "decorators",
+    "arrays",
+    "matrices",
     "type-safety"
   ],
-  "homepage": "https://github.com/ashgw/ts-roids",
+  "homepage": "https://github.com/ashgw/ts-matrices",
   "bugs": {
-    "url": "https://github.com/ashgw/ts-roids/issues"
+    "url": "https://github.com/ashgw/ts-matrices/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ashgw/ts-roids.git"
+    "url": "git+https://github.com/ashgw/ts-matrices.git"
   },
-  "license": "GPL-3.0-only",
+  "license": "MIT", 
   "author": {
     "name": "Ashref Gwader",
     "email": "ashref@ashgw.me"
@@ -34,17 +35,17 @@
   ],
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build:node": "rimraf dist && rollup -c rollup.config.ts",
     "build:docs": "typedoc src/index.ts",
     "hooks": "husky init",
-    "test": "vitest --coverage --run",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
     "lint": "pnpm format && pnpm lint:ts && pnpm lint:spelling && pnpm lint:knip",
-    "lint:ts": "tsc --noEmit; eslint .",
+    "lint:ts": "tsc --noEmit && eslint .",
     "lint:knip": "knip --production --strict --exclude exports,nsExports,types,nsTypes",
     "format": "prettier . --write",
     "format-check": "prettier --check .",
-    "lint:spelling": "cspell \"**\" \".github/**/*\"",
-    "prepare": "husky"
+    "lint:spelling": "cspell \"**\" \".github/**/*\""
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.0",
