--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,40 @@
 {
-    "extends": "./tsconfig.build.json",
-    "compilerOptions": {
-      "rootDir": "."
-    },
-    "include": [".", "src", "tests"]
-  }
-  
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "alwaysStrict": true,
+    "esModuleInterop": true,
+    "exactOptionalPropertyTypes": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": false,
+    "lib": ["ESNext"],
+    "module": "ESNext",
+    "experimentalDecorators": true,
+    "moduleResolution": "bundler",
+    "newLine": "LF",
+    "noEmit": true,
+    "noEmitOnError": true,
+    "noErrorTruncation": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "preserveConstEnums": true,
+    "pretty": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "strict": true,
+    "target": "ESNext",
+    "useUnknownInCatchVariables": true,
+    "baseUrl": ".",
+    "rootDir": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": [".", "src", "tests"],
+  "exclude": ["dist/"]
+}
