--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/ashgw/ts-matrices.git"
   },
-  "license": "MIT", 
+  "license": "MIT",
   "author": {
     "name": "Ashref Gwader",
     "email": "ashref@ashgw.me"
@@ -93,6 +93,7 @@
     "rollup-plugin-dts": "6.1.0",
     "semantic-release": "23.0.2",
     "ts-node": "^10.9.2",
+    "ts-roids": "1.42.0",
     "typedoc": "0.25.13",
     "typescript": "5.3.3",
     "vite-tsconfig-paths": "4.2.3",
