--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,14 @@
     "ignorePatterns": ["/playground/","/docs/"],
     "plugins": ["@typescript-eslint"],
     "rules": {
+      "@typescript-eslint/consistent-type-imports": [
+        "error",
+        {
+          "prefer": "type-imports",
+          "disallowTypeAnnotations": true,
+          "fixStyle": "separate-type-imports"
+        }
+      ],
       "@typescript-eslint/no-empty-function": "error",
       "@typescript-eslint/no-unsafe-assignment": "error",
       "@typescript-eslint/no-unsafe-call": "error",
@@ -23,7 +31,6 @@
       "@typescript-eslint/no-unsafe-return": "error",
       "@typescript-eslint/no-unsafe-argument": "warn",
       "@typescript-eslint/no-explicit-any": "warn"
-
     },
     "overrides": [
       {
@@ -39,4 +46,3 @@
       }
     ]
   }
-  
