--- a/package.json
+++ b/package.json
@@ -40,12 +40,10 @@
     "hooks": "husky init",
     "test": "vitest --run",
     "test:watch": "vitest --watch",
-    "lint": "pnpm format && pnpm lint:ts && pnpm lint:spelling && pnpm lint:knip",
+    "lint": "pnpm format && pnpm lint:ts",
     "lint:ts": "tsc --noEmit && eslint .",
-    "lint:knip": "knip --production --strict --exclude exports,nsExports,types,nsTypes",
     "format": "prettier . --write",
-    "format-check": "prettier --check .",
-    "lint:spelling": "cspell \"**\" \".github/**/*\""
+    "format-check": "prettier --check ."
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.0",
@@ -67,7 +65,6 @@
     "@vitest/coverage-istanbul": "1.5.0",
     "@vitest/coverage-v8": "1.2.2",
     "can-npm-publish": "1.3.6",
-    "cspell": "8.3.2",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -84,7 +81,6 @@
     "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vitest": "0.3.20",
     "husky": "9.0.7",
-    "knip": "4.2.0",
     "prettier": "3.1.1",
     "prettier-plugin-packagejson": "2.4.9",
     "rimraf": "5.0.5",
