--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           jobs: ${{ toJSON(needs)}}
 
   npm:
-    if: github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/heads/main'
     needs: [mergeable]
     uses: ./.github/workflows/npm.yml
     secrets: inherit
