--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "description": "Advanced type-level utilities for arrays, matrices, and numeric operations (filtering, intersection, transposition, and min/max).",
   "type": "module",
-  "keywords": [
+  " keywords": [
     "typescript",
     "utility",
     "types",
@@ -35,14 +35,15 @@
   ],
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "rimraf dist && rollup -c rollup.config.ts",
+    "build:node": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build:docs": "typedoc src/index.ts",
     "hooks": "husky init",
-    "test": "vitest --run",
-    "test:watch": "vitest --watch",
+    "test": "vitest --coverage --run",
     "lint": "pnpm format && pnpm lint:ts",
-    "lint:ts": "tsc --noEmit && eslint .",
+    "lint:ts": "tsc --noEmit; eslint .",
     "format": "prettier . --write",
-    "format-check": "prettier --check ."
+    "format-check": "prettier --check .",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.0",
@@ -64,6 +65,7 @@
     "@vitest/coverage-istanbul": "1.5.0",
     "@vitest/coverage-v8": "1.2.2",
     "can-npm-publish": "1.3.6",
+    "cspell": "8.3.2",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -80,6 +82,7 @@
     "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vitest": "0.3.20",
     "husky": "9.0.7",
+    "knip": "4.2.0",
     "prettier": "3.1.1",
     "prettier-plugin-packagejson": "2.4.9",
     "rimraf": "5.0.5",
